--- a/app/assets/components/ui-elements/oj-annotation-response.html
+++ b/app/assets/components/ui-elements/oj-annotation-response.html
@@ -22,19 +22,27 @@
           .header .text {
               font-family: Neuton;
               color:         #192023;
-              font-size:     16px;/* Approximation due to font substitution */
-              font-weight:   700;
-              line-height:   14px;
+              font-size:     20px;/* Approximation due to font substitution */
+              font-weight:   400;
+              line-height:   30px;
               @apply(--ellipses);
           }
           .header .date {
               font-family: Roboto;
               color:         #b3b3b3;
-              font-size:     12px;/* Approximation due to font substitution */
+              font-size:     14px;/* Approximation due to font substitution */
               font-style:    italic;
-              margin-bottom: -3px;
               margin-left:   6px;
+              margin-bottom: 4px;
               white-space:   nowrap;
+          }
+
+          markdown-content {
+            font-family: Roboto;
+            color:       black;
+            font-size:   14px;/* Approximation due to font substitution */
+            font-weight: 400;
+            min-height:  25px;
           }
 
           markdown-text-area {
