--- a/app/assets/components/ui-elements/oj-annotation-responses.html
+++ b/app/assets/components/ui-elements/oj-annotation-responses.html
@@ -23,15 +23,14 @@
 
           :host {
               display:     block;
-              margin-left: 18px;
           }
           .responses {
               box-sizing: border-box;
               padding:     0;
-              font-size:   0.9em;
+              margin-left: 10px;
           }
 
-          oj-annotation-response, oj-annotation-respoonse-new {
+          oj-annotation-response, oj-annotation-response-new {
               margin-top: 6px;
           }
 
@@ -39,12 +38,21 @@
               line-height:     18px;
           }
           .action {
-              text-decoration: underline;
-              font-size:       12px;
-              color:           #888;
-              font-variant:    small-caps;
-              margin-right:    4px;
-              margin-left:     4px;
+              font-family: Roboto;
+              text-decoration: none;
+              font-size:       14px;
+              color:           #54d1b8;
+              margin-right:    10px;
+          }
+          .action:hover{
+            color: #44a995;
+            text-decoration: underline;
+          }
+          .action:first-child {
+              margin-left: 10px;
+          }
+          .action:last-child {
+              margin-right: 0px;
           }
           .action[data-disabled] {
               text-decoration: none;
