--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -83,7 +83,7 @@
 
           .container {
               box-sizing: border-box;
-              padding:    0 18px;
+              margin: 0px;
               @apply(--disable-selection);
           }
           .container-inner {
@@ -91,10 +91,10 @@
               background-color: #efefef;
               color:            #7d7d7d;
               font-weight:      400;
-              padding:          2px;
+              padding:          10px;
           }
           .open .container-inner, .transitioning .container-inner {
-              /*box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);*/
+            background-color: rgba(255,250,158,0.75);
           }
 
 
@@ -151,19 +151,28 @@
 
           .actions {
               line-height:     18px;
+              width:           95%;
+              margin-top:      3px;
           }
 
           .action {
-              text-decoration: none !important;
+              font-family: Roboto;
+              text-decoration: none;
               font-size:       14px;
               color:           #54d1b8;
-              font-variant:    small-caps;
-              margin-right:    4px;
-              margin-left:     4px;
+              margin-right:    10px;
+          }
+          .action:hover{
+            color: #44a995;
+            text-decoration: underline;
           }
           .action:first-child {
-              margin-left:     4px;
+              margin-left: 10px;
           }
+          .action:last-child {
+              margin-right: 0px;
+          }
+
           .action[data-disabled] {
               text-decoration: none;
               color:           #b0b0b0;
