All the underlines!

--- a/app/assets/components/ui-elements/oj-annotation-response-new.html
+++ b/app/assets/components/ui-elements/oj-annotation-response-new.html
@@ -44,7 +44,7 @@
           }
           .action {
               font-family: Roboto;
-              text-decoration: none;
+              text-decoration: underline;
               font-size:       14px;
               color:           #54d1b8;
               margin-right:    10px;
