--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
   </head>
 
   <body unresolved class="fullbleed layout vertical">
+    <%= render 'layouts/toolbar' %>
+
     <%= yield %>
 
     <%= render 'layouts/flash' %>
