--- a/app/assets/stylesheets/toolbar.css.scss
+++ b/app/assets/stylesheets/toolbar.css.scss
@@ -6,8 +6,9 @@
 
   width:             100%;
   height:            108px;
+  flex:              0 0 auto;
   box-sizing:        border-box;
-  padding:           0 53px 0 29px;
+  padding:           0 53px;
 
   background-color:  #192023;
   font-family:       Roboto;
@@ -79,7 +80,9 @@
     text-align:       right;
     margin-right:     16px;
     text-decoration:  none;
-    white-space:      nowrap;
+  }
+
+  a.username {
   }
 
   a.button {
@@ -97,7 +100,6 @@
     text-decoration:  none;
     white-space:      nowrap;
     margin-left:      4px;
-    margin-right:     24px;
     padding:          8px 20px;
 
     &:hover {
@@ -105,6 +107,9 @@
       border-color:  #5be2c7;
     }
 
+    &:active {
+      background:    #5be2c7;
+    }
   }
 
 }
