Typo fix for anchor

--- a/app/views/layouts/_toolbar.html.erb
+++ b/app/views/layouts/_toolbar.html.erb
@@ -1,6 +1,6 @@
 <div id="toolbar">
 
-  <a class="drawer-toggle">&#9776;</a>a>
+  <a class="drawer-toggle">&#9776;</a>
   <div class="title">The Open Journal</div>
 
    <input id="search" is="iron-input" placeholder="Search" on-keyup="onSearchKeyUp">
