--- a/app/views/home/temp_home.html.erb
+++ b/app/views/home/temp_home.html.erb
@@ -8,7 +8,7 @@
 
   <div id="page">
     <div class="papers">
-      <h2 class="recent">Recent Papers</h2>
+      <h2 class="category">Recent Papers</h2>
       <% papers.each do |paper| %>
           <div class="paper" style="margin-right: 30px;">
             <p class="title"><%= paper.title %></p>
@@ -23,5 +23,3 @@
 </div>
 
 <%= render 'layouts/footer' %>
-
-
