--- a/app/views/layouts/_toolbar.html.erb
+++ b/app/views/layouts/_toolbar.html.erb
@@ -3,8 +3,9 @@
   <a class="drawer-toggle">&#9776;</a>
   <div class="title">The Open Journal</div>
 
-   <input id="search" is="iron-input" placeholder="Search" on-keyup="onSearchKeyUp">
-   <iron-icon id="search-icon" icon="icons:search"></iron-icon>
+  <!-- TODO decide where search should fit in this layout -->
+   <!-- <input id="search" is="iron-input" placeholder="Search" on-keyup="onSearchKeyUp">
+   <iron-icon id="search-icon" icon="icons:search"></iron-icon> -->
 
   <%- if signed_in? %>
       <%= render 'layouts/toolbar_logged_in' %>
