Remove Rails truncate

--- a/app/views/home/_dashboard_paper.html.erb
+++ b/app/views/home/_dashboard_paper.html.erb
@@ -2,7 +2,7 @@
   <% papers.each do |paper| %>
   <div class="dashboard_paper">
     <a href="#" class="action">View &uarr;</a>
-    <p class="title"><%= truncate(paper.title, length: 75) %></p>
+    <p class="title"><%= paper.title %></p>
     <p class="meta"><a href="https://arxiv.org/abs/<%= paper.provider_id %>"><%= paper.typed_provider_id %></a> / <%= paper.authors.split(',').first %> / <%= paper.created_at.strftime('%d %B %Y') %></p>
   </div>
   <% end %>
