--- a/app/views/layouts/_toolbar.html.erb
+++ b/app/views/layouts/_toolbar.html.erb
@@ -1,7 +1,7 @@
 <div id="toolbar">
 
   <a class="drawer-toggle">&#9776;</a>
-  <div class="title">The Open Journal</div>
+  <a href="/home" class="title">The Open Journal</a>
 
   <!-- TODO decide where search should fit in this layout -->
    <!-- <input id="search" is="iron-input" placeholder="Search" on-keyup="onSearchKeyUp">
@@ -12,5 +12,4 @@
   <%- else %>
       <%= render 'layouts/toolbar_logged_out' %>
   <%- end %>
-
 </div>
