--- a/app/views/layouts/_toolbar_logged_out.html.erb
+++ b/app/views/layouts/_toolbar_logged_out.html.erb
@@ -1,5 +1,5 @@
-<a is="pushstate-anchor" class="link" href="/about">About</a>
-<a is="pushstate-anchor" class="link" href="/recent">Recent Papers</a>
+<a class="link" href="/about">About</a>
+<a class="link" href="/recent">Recent Papers</a>
 
 <a class="button" href="/submit">Submit a Paper</a>
 <a class="button" href="/auth/orcid">Sign In</a>
