Unset container class

--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -85,6 +85,7 @@
               box-sizing: border-box;
               margin: 0px;
               @apply(--disable-selection);
+              width: unset !important;
           }
           .container-inner {
               box-sizing:       border-box;
