Redirect to /dashboard when submitting

--- a/app/assets/components/subpages/oj-paper-preview.html
+++ b/app/assets/components/subpages/oj-paper-preview.html
@@ -177,7 +177,8 @@
 
       onPostRepsonse: function (response) {
         this.fire('notification', 'Paper ' + this.paper_details.title + ' submitted');
-        this.fire('go', '/submitted');
+        window.location.href = '/dashboard';
+        // this.fire('go', '/');
       },
 
       onPostError: function (event) {
