--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -51,6 +51,15 @@
       }
     }
 
+    .flash {
+      font-family:      Roboto;
+      font-size:        22px;
+      font-weight:      400;
+      padding:          30px 100px;
+      border: unset !important;
+      border-radius: unset !important;
+    }
+
     .banner {
       background:       #54d1b8;
       color:            #edf12c;
