--- a/app/views/home/_dashboard_section.html.erb
+++ b/app/views/home/_dashboard_section.html.erb
@@ -1,4 +1,4 @@
-<h2 class="category" name="<%= section %>"><%= section.titlecase %></h2>
+<h2 class="category" id="<%= section %>"><%= section.titlecase %></h2>
 
 <% papers.each do |paper| %>
 <div class="dashboard_paper">
